--- a/MobileAM/Main.xib
+++ b/MobileAM/Main.xib
@@ -2,13 +2,14 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Navigation items with more than one left or right bar item" minToolsVersion="7.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MainViewController">
             <connections>
-                <outlet property="bottomControl" destination="OJ5-lv-DEP" id="4Bh-Rd-uKa"/>
+                <outlet property="bottomCpuButton" destination="2kM-6D-8NJ" id="U9g-2c-Pmu"/>
+                <outlet property="bottomMemoryButton" destination="1lq-fx-UC3" id="XV4-Zt-Hnl"/>
+                <outlet property="bottomToolbar" destination="n42-qV-BXI" id="uA2-Gx-uWF"/>
                 <outlet property="bottomView" destination="GuP-rm-Ob5" id="72z-pd-yhg"/>
                 <outlet property="tableView" destination="nrr-ed-GoR" id="Ram-YG-oK1"/>
                 <outlet property="topBar" destination="XCZ-Kn-YJL" id="NNA-ds-tJb"/>
@@ -17,11 +18,11 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="PSU-aI-NgR">
-            <rect key="frame" x="0.0" y="0.0" width="1011" height="852"/>
+            <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="nrr-ed-GoR" userLabel="TableView">
-                    <rect key="frame" x="0.0" y="0.0" width="1011" height="652"/>
+                    <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="WqI-oL-WOf"/>
@@ -29,7 +30,7 @@
                     </connections>
                 </tableView>
                 <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XCZ-Kn-YJL" userLabel="NavigationBar">
-                    <rect key="frame" x="0.0" y="0.0" width="1011" height="64"/>
+                    <rect key="frame" x="0.0" y="0.0" width="1024" height="64"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="64" id="0BC-pO-e9N"/>
                     </constraints>
@@ -39,54 +40,77 @@
                                 <barButtonItem title="Kill" id="DKB-xW-Hea"/>
                                 <barButtonItem title="Info" id="xda-3A-pTo"/>
                             </leftBarButtonItems>
-                            <barButtonItem key="rightBarButtonItem" style="plain" id="67x-bg-WVs" userLabel="SearchButton">
-                                <searchBar key="customView" contentMode="redraw" id="2GL-Oj-1Yg">
-                                    <rect key="frame" x="751" y="10" width="240" height="64"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <textInputTraits key="textInputTraits"/>
-                                </searchBar>
-                            </barButtonItem>
                         </navigationItem>
                     </items>
                     <connections>
                         <outlet property="delegate" destination="-1" id="3OY-p9-3qi"/>
                     </connections>
                 </navigationBar>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GuP-rm-Ob5" userLabel="BottomView">
-                    <rect key="frame" x="0.0" y="652" width="1011" height="200"/>
-                    <subviews>
-                        <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="OJ5-lv-DEP">
-                            <rect key="frame" x="289" y="8" width="433" height="29"/>
-                            <segments>
-                                <segment title="CPU"/>
-                                <segment title="Memory"/>
-                                <segment title="Log"/>
-                            </segments>
-                        </segmentedControl>
-                    </subviews>
-                    <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="200" id="cRs-P1-5Vh"/>
-                        <constraint firstAttribute="trailing" secondItem="OJ5-lv-DEP" secondAttribute="trailing" constant="289" id="dpJ-g7-2FX"/>
-                        <constraint firstItem="OJ5-lv-DEP" firstAttribute="leading" secondItem="GuP-rm-Ob5" secondAttribute="leading" constant="289" id="yGE-2Y-dtV"/>
-                        <constraint firstItem="OJ5-lv-DEP" firstAttribute="top" secondItem="GuP-rm-Ob5" secondAttribute="topMargin" id="z8g-nx-dBP"/>
-                    </constraints>
-                </view>
+                <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="n42-qV-BXI">
+                    <rect key="frame" x="0.0" y="724" width="1024" height="44"/>
+                    <items>
+                        <barButtonItem style="plain" systemItem="flexibleSpace" id="vJl-wc-Xz0"/>
+                        <barButtonItem style="plain" id="yjA-Tt-cRF">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="2kM-6D-8NJ">
+                                <rect key="frame" x="443" y="7" width="64" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="CPU"/>
+                                <connections>
+                                    <action selector="bottomButtonPressed:" destination="-1" eventType="touchUpInside" id="NnC-zz-P8E"/>
+                                </connections>
+                            </button>
+                        </barButtonItem>
+                        <barButtonItem style="plain" id="ouz-52-NCS">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="1lq-fx-UC3">
+                                <rect key="frame" x="517" y="7" width="64" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Memory"/>
+                                <connections>
+                                    <action selector="bottomButtonPressed:" destination="-1" eventType="touchUpInside" id="JfU-g2-F1y"/>
+                                </connections>
+                            </button>
+                        </barButtonItem>
+                        <barButtonItem style="plain" systemItem="flexibleSpace" id="T2k-hn-wgo"/>
+                    </items>
+                </toolbar>
             </subviews>
             <constraints>
                 <constraint firstItem="XCZ-Kn-YJL" firstAttribute="leading" secondItem="PSU-aI-NgR" secondAttribute="leading" id="396-xE-jkk"/>
                 <constraint firstAttribute="trailing" secondItem="nrr-ed-GoR" secondAttribute="trailing" id="528-B3-5r6"/>
                 <constraint firstItem="XCZ-Kn-YJL" firstAttribute="top" secondItem="PSU-aI-NgR" secondAttribute="top" id="Cpe-pS-RCT"/>
+                <constraint firstAttribute="trailing" secondItem="n42-qV-BXI" secondAttribute="trailing" id="H53-GY-PxZ"/>
                 <constraint firstAttribute="trailing" secondItem="XCZ-Kn-YJL" secondAttribute="trailing" id="OLW-qX-ezO"/>
+                <constraint firstItem="n42-qV-BXI" firstAttribute="top" secondItem="nrr-ed-GoR" secondAttribute="bottom" id="PZU-1L-ae8"/>
                 <constraint firstItem="nrr-ed-GoR" firstAttribute="top" secondItem="PSU-aI-NgR" secondAttribute="top" id="Q34-ph-Ork"/>
-                <constraint firstItem="GuP-rm-Ob5" firstAttribute="top" secondItem="nrr-ed-GoR" secondAttribute="bottom" id="Qpz-D0-Ugq"/>
-                <constraint firstAttribute="trailing" secondItem="GuP-rm-Ob5" secondAttribute="trailing" id="eub-qW-tvr"/>
-                <constraint firstAttribute="bottom" secondItem="GuP-rm-Ob5" secondAttribute="bottom" id="fph-Ju-mQP"/>
+                <constraint firstItem="n42-qV-BXI" firstAttribute="leading" secondItem="PSU-aI-NgR" secondAttribute="leading" id="V0C-7k-rhw"/>
+                <constraint firstAttribute="bottom" secondItem="nrr-ed-GoR" secondAttribute="bottom" id="gco-BL-Cic"/>
                 <constraint firstItem="nrr-ed-GoR" firstAttribute="leading" secondItem="PSU-aI-NgR" secondAttribute="leading" id="sEj-L6-dsN"/>
-                <constraint firstItem="GuP-rm-Ob5" firstAttribute="leading" secondItem="PSU-aI-NgR" secondAttribute="leading" id="xKi-9E-TJr"/>
+                <constraint firstAttribute="bottom" secondItem="n42-qV-BXI" secondAttribute="bottom" id="sVG-YR-YNd"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <variation key="default">
+                <mask key="constraints">
+                    <exclude reference="PZU-1L-ae8"/>
+                </mask>
+            </variation>
             <point key="canvasLocation" x="281.5" y="96"/>
+        </view>
+        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GuP-rm-Ob5" userLabel="BottomView">
+            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+            <subviews>
+                <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="FfV-2i-gJL">
+                    <rect key="frame" x="0.0" y="0.0" width="121" height="29"/>
+                    <segments>
+                        <segment title="First"/>
+                        <segment title="Second"/>
+                    </segments>
+                </segmentedControl>
+                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="84g-Xm-une">
+                    <rect key="frame" x="0.0" y="0.0" width="51" height="31"/>
+                </switch>
+            </subviews>
+            <color key="backgroundColor" red="0.0067950606769999998" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+            <point key="canvasLocation" x="436" y="909"/>
         </view>
     </objects>
 </document>
